--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,3 +10,20 @@ services:
       - ./:/WorkoutPlanner
     env_file:
       - .env
+    depends_on:
+      - postgres
+
+  postgres:
+    container_name: workout_planner_postgres
+    image: postgres:16
+    restart: always
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+    env_file:
+      - .env
+    ports:
+      - "5432:5432"
+
+
+volumes:
+  postgres_data:
